# caldav-to-ics

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  eslint.config.mjs  next.config.js  package.json
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
src/: config.rs
src/api/: mod.rs  openapi.rs  reverse_sync.rs  sync.rs
src/server/: auth.rs  mod.rs  route_builder.rs
