[package]
name = "caldav-ics-sync"
description = "CalDAV/ICS sync service"
version = "0.2.4"
edition = "2024"

[workspace]
members = []

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["ws", "http2"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
axum-extra = { version = "0.12", features = ["typed-header", "cookie"] }
async-stream = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }
anyhow = "1"
config = { version = "0.15", default-features = false, features = [
  "convert-case",
] }
subtle = "2"
tokio-retry2 = "0.5"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = "0.5"
rand = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
itertools = "0.14"
jsonwebtoken = "10"
base64 = "0.22"
icalendar = "0.16"
roxmltree = "0.20"
rusqlite = { version = "0.35", features = ["bundled"] }
utoipa = { version = "5", features = ["axum_extras"] }

[dev-dependencies]

# Binaries are auto-discovered from src/bin/
